# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "qml-minimal-no-cmake"
# ANCHOR: book_cargo_toml_no_cmake
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ANCHOR_END: book_cargo_toml_no_cmake
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["full"] }

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { workspace = true, features = [ "link_qt_object_files" ] }

# Depend on qt-build-utils so that qt_minimal feature can be enabled
qt-build-utils = { workspace = true }

[features]
default = []

# Enable this feature to use qt_minimal downloads when QMAKE is not set
qt_minimal = ["qt-build-utils/qt_minimal"]
